tests/baselines/reference/strictInterface3.errors.txt
tests/cases/conformance/types/strict/strictInterface3.ts(6,11): error TS2430: Interface 'BadDerived' incorrectly extends interface 'Base'.
  Types of property 'name' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/types/strict/strictInterface3.ts (1 errors) ====
    strict interface Base {
    	name: string;
    }
    
    // Should not be OK
    interface BadDerived extends Base {
              ~~~~~~~~~~
!!! error TS2430: Interface 'BadDerived' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'name' are incompatible.
!!! error TS2430:     Type 'number' is not assignable to type 'string'.
    	name: number;
    }
    
    